--- a/a/css/base.css
+++ b/a/css/base.css
@@ -251,7 +251,9 @@ nav  ul  li a:hover .icons {
 #content {
     position: absolute;
     top: 45px;
+    width: 100%;
     overflow-y: auto;
+    background: rgba(0,0,0,0.1);
 }
 .leftContent {
     left: 250px;
@@ -318,21 +320,6 @@ nav  ul  li a:hover .icons {
     z-index: 1;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.7);
-}
-/* LOADER */
-.loaderDisplayNav {
-    position: fixed;
-    z-index: 10000;
-    color: #F5A214;
-    top: calc(50% - 21px);
-    left: calc(50% - 27px + 125px);
-}
-.loaderUnDisplayNav {
-    position: fixed;
-    z-index: 10000;
-    color: #F5A214;
-    top: calc(50% - 21px);
-    left: calc(50% - 27px);
 }
 .mBottom15 {
     margin-bottom: 15px;
