--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -25,9 +25,20 @@
     padding: 0;
 }
 /* AVERAGE */
-.average {
+.tableContainer {
+    position: relative;
+}
+.tableContainer table {
+    width: 100%;
     height: 55px;
-    font-family: 'Montserrat';
+}
+.tableContainer th {
+    text-align: center;
+    font-size: 12px;
+    background: rgba(0,0,0,0.1);
+}
+.tableContainer td {
+    text-align: center;
 }
 
 
