--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -22,24 +22,41 @@
 }
 .legend .subLegend {
     font-size: 12px;
-    padding: 0;
 }
 /* AVERAGE */
-.tableContainer {
-    position: relative;
-}
-.tableContainer table {
+table {
     width: 100%;
     height: 55px;
 }
-.tableContainer th {
+table th {
     text-align: center;
     font-size: 12px;
     background: rgba(0,0,0,0.1);
+    padding: 5px;
 }
-.tableContainer td {
+table td {
     text-align: center;
+    background: rgba(0,0,0,0.1);
+    font-family: 'Montserrat';
+    border-right: 3px solid white;
+    font-weight: bold;
 }
+/* DONUTS CHART */
+.backYellow {
+    background: #F5A214;
+}
+.backGrey {
+    background: #262626;
+}
+.legendColor {
+    height: 5px;
+    width: 100%;
+}
+.motorLegend {
+    font-family: 'Montserrat';
+    font-size: 1.2rem;
+}
+
 
 
 
