--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -1,6 +1,5 @@
 /* STATISTIC */
 .statistic {
-    height: 100px;
     font-family: 'Montserrat';
     color: #262626;
     display: flex;
@@ -8,6 +7,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    height: 100px;
 }
 .statistic > i {
     color: #262626;
@@ -55,6 +55,8 @@ table td {
 .motorLegend {
     font-family: 'Montserrat';
     font-size: 1.2rem;
+    text-overflow: ellipsis;
+    overflow: hidden
 }
 
 
