--- a/a/css/base.css
+++ b/a/css/base.css
@@ -254,7 +254,7 @@ nav  ul  li a:hover .icons {
     top: 45px;
     width: 100%;
     overflow-y: auto;
-    overflow-x: hidden;
+    background: rgba(78, 75, 58, 0.1);
 }
 .leftContent {
     left: 250px;
