--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -31,14 +31,14 @@ table {
 table th {
     text-align: center;
     font-size: 12px;
-    background: rgba(0,0,0,0.1);
     padding: 5px;
+    border-right: 1px solid rgba(0,0,0,0.1);
 }
 table td {
     text-align: center;
-    background: rgba(0,0,0,0.1);
+    background: white;
     font-family: 'Montserrat';
-    border-right: 3px solid white;
+    border-right: 3px solid rgba(0,0,0,0.1);
     font-weight: bold;
 }
 /* DONUTS CHART */
