--- a/a/css/a.css
+++ b/a/css/a.css
@@ -1,20 +1,7 @@
-table th {
-    padding: 5px;
-    text-align: center;
-    white-space: nowrap;
-}
-table td {
-    padding: 5px;
-    text-align: center;
-    white-space: nowrap;
-}
-table tr {
-    font-family: 'Montserrat';
-    font-size: 12px;
-}
+
 .buttonsContainer {
     width: 100%;
-    height: 44px;
+    height: 50px;
     overflow: hidden;
 }
 .buttonsContainer a {
@@ -41,3 +28,29 @@ table tr {
     background-color: rgba(0,0,0,0.2);
     color: rgba(0, 0, 0, 0.87);
 }
+
+table td {
+    padding: 15px;
+    white-space: nowrap;
+    font-family: 'Montserrat';
+}
+table {
+    width: 100%;
+}
+.a { 
+    width: 100%; 
+    overflow-x: auto;  
+    padding-left:8em; 
+}
+.headcol {
+    position:absolute; 
+    width:8em;
+    left:0;
+    overflow:hidden;
+    background: white;
+}
+
+
+
+
+
