--- a/a/css/a.css
+++ b/a/css/a.css
@@ -4,18 +4,17 @@
     height: 50px;
     overflow: hidden;
 }
-.buttonsContainer a {
-    background: rgb(224, 225, 226);
+
+.buttonsContainer .buttonColumn {
     width: 50%;
     height: 100%;
-    text-decoration: none;
+    /*text-decoration: none;
     color: rgba(0, 0, 0, 0.6);
     font-size: 14px;
     font-style: normal;
     font-weight: bold;
     outline-color: rgba(0, 0, 0, 0.6);
-    box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-    font-family: 'Montserrat';
+    box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;*/
     float: left;
     display: flex;
     flex-direction: row;
@@ -23,24 +22,20 @@
     justify-content: center;
     align-items: center;
 }
-.buttonsContainer a:hover {
-    text-decoration: none;
-    background-color: rgba(0,0,0,0.2);
-    color: rgba(0, 0, 0, 0.87);
-}
 
 table td {
     padding: 15px;
     white-space: nowrap;
     font-family: 'Montserrat';
+    text-align: center;
 }
 table {
     width: 100%;
 }
-.a { 
+.tableContainer { 
     width: 100%; 
     overflow-x: auto;  
-    padding-left:8em; 
+    padding-left: 8em;
 }
 .headcol {
     position:absolute; 
@@ -49,6 +44,11 @@ table {
     overflow:hidden;
     background: white;
 }
+.icon-background1 {
+    color: #F5A214;
+}
+
+
 
 
 
