--- a/a/css/a.css
+++ b/a/css/a.css
@@ -1,3 +1,35 @@
+.custom-icon {
+  font-size:12px;
+  background:#666;
+  background:rgba(0,0,0,0.4);
+  padding:5px;
+  -webkit-border-radius:1100%;
+  -moz-border-radius:100%;
+  -o-border-radius:100%;
+  border-radius:100%;
+  /*border:6px solid #fff;*/
+  color:#fff;
+	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.46);
+  text-align:center;
+  display:table-cell;
+  vertical-align:middle;
+  width:20px;
+  height:20px;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  -o-transition:.5s;
+  transition:.5s;
+}
+.custom-icon:hover {
+  background:rgba(0,0,0,0.6);
+}
+.fix-editor {
+  display:none;
+}
+.icon-wrapper {
+  display:inline-block;
+}
+
 
 .buttonsContainer {
     width: 100%;
