--- a/a/css/a.css
+++ b/a/css/a.css
@@ -38,8 +38,8 @@
 }
 
 
-.buttonsContainer a {
-    /*background: rgb(224, 225, 226);
+.buttonsContainer .buttonColumn {
+    background: rgb(224, 225, 226);
     /*width: 100%;
     display: inline-block;
     text-align: center;
@@ -53,9 +53,11 @@
     box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
     font-family: 'Montserrat';*/
 }
-.buttonsContainer a:hover {
+.buttonsContainer .buttonColumn:hover {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.87);
+    /*background: green;*/
+    cursor: pointer;
 }
 
 .buttonsContainer .buttonColumn {
