--- a/a/css/base.css
+++ b/a/css/base.css
@@ -38,7 +38,7 @@
 	padding: 0px;
 }
 .shadow {
-    border-top: 1px solid #D4D4D5;
+    /*border-top: 1px solid #D4D4D5;*/
     border-left: 1px solid #D4D4D5;
     border-right: 1px solid #D4D4D5;
     background-color: #FFFFFF;
