--- a/a/css/zonasCliente.css
+++ b/a/css/zonasCliente.css
@@ -18,7 +18,6 @@ table th {
     text-align: center;
     color: #262626;
     font-size: 12px;
-    /*padding: 5px;*/
 }
 .accordion {
     text-align: left;
@@ -35,19 +34,9 @@ table th {
 .activeAccordion {
     border-left: 5px solid #F5A214;
 }
-.btnSearch {
-    background: rgb(224, 225, 226);
-    color: rgba(0, 0, 0, 0.6);
-    cursor: pointer;
-    box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-}
-.btnSearch:hover {
-    background-color: rgba(0,0,0,0.2);
-    color: rgba(0, 0, 0, 0.87);
-}
-/*.tdPosition {
+.tdPosition {
     position: relative;
-}*/
+}
 
 .plusIcon {
     float: left;
