--- a/a/css/zonasCliente.css
+++ b/a/css/zonasCliente.css
@@ -12,6 +12,8 @@ table td {
     padding: 5px;
     /*white-space: nowrap;*/
     border-bottom: 1px solid rgba(0,0,0,0.1);
+    
+    
 }
 table th {
     border-bottom: 3px solid #F5A214;
@@ -19,20 +21,31 @@ table th {
     color: #262626;
     font-size: 12px;
 }
+.shadowBottomTr {
+        box-shadow: 0px 2px 10px #888888;
+}
+.shadowTopTr {
+        box-shadow: 0px -2px 10px #888888;
+}
 .accordion {
-    text-align: left;
-    background: #262626;
-    color: #e9e9e9;
+    /*text-align: left;*/
+    background: rgba(0,0,0,0.1);
+    color: #262626;
     display: none;
+    
+}
+.ac {
+    display: table-cell;
+}
+.accordion ul {
+    padding: 0;
 }
 .accordion li {
     list-style: none;
+    text-align: center;
 }
 .unDisplayColumn {
     display: none;
-}
-.activeAccordion {
-    border-left: 5px solid #F5A214;
 }
 .tdPosition {
     position: relative;
@@ -55,3 +68,4 @@ table th {
         display: none;
     }
 }
+
