--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -187,13 +187,11 @@ table td {
     background: white;
     z-index: 2;
 }
+/* BAR INVERSE */
 #chartLineHistorical {
     height: 100px;
 }
 #chartLineHistorical2 {
-    height: 100px;
-}
-#chartLineHistorical3 {
     height: 100px;
 }
 #chartLineHistorical4 {
@@ -210,7 +208,7 @@ table td {
     color: #fff;
     text-align: center;
     pointer-events: none;
-    z-index: 100;
+    z-index: 1000;
     transition: opacity .2s linear;
     transform-origin: 50% 50%;
     transform: translateX(0px) translateY(0px) rotate(0deg);
