--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -1,3 +1,7 @@
+.ct-labels33 {
+    font-size: 20px;
+    color: red;
+}
 /* STATISTIC */
 .statistic {
     font-family: 'Montserrat';
@@ -195,7 +199,7 @@ table td {
     height: 100px;
 }
 #chartLineHistorical4 {
-    height: 100px;
+    height: 200px;
 }
 /*TOOLTIP*/
 .chartist-tooltip {
