--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -1,6 +1,9 @@
 .ct-labels33 {
     font-size: 10px;
 }
+.ct-axis-title {
+  font-size: 10px;
+}
 /* Legend styles */
 .ct-legend {
   position: relative;
@@ -9,7 +12,7 @@
   text-align: center;
 }
 ul.ct-legend {
-  top: -20px;
+  top: 5px;
   margin: auto;
 }
 .ct-legend li {
@@ -244,7 +247,7 @@ table td {
 }
 /* BAR INVERSE */
 #chartLineHistorical {
-    height: 200px;
+    height: 100px;
 }
 #chartLineHistorical2 {
     height: 100px;
