--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -1,8 +1,14 @@
 .ct-labels33 {
     font-size: 10px;
 }
+.ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point {
+  stroke: #F5A214;
+}
+.ct-series-b .ct-bar, .ct-series-b .ct-line, .ct-series-b .ct-point {
+  stroke: #262626;
+}
 .ct-axis-title {
-  font-size: 10px;
+  font-size: 16px;
 }
 /* Legend styles */
 .ct-legend {
@@ -37,7 +43,7 @@ ul.ct-legend {
 }
 .ct-legend.ct-legend-inside {
   position: absolute;
-  top: 0;
+  top: 0px;
   right: 0;
 }
 .ct-legend.ct-legend-inside li{
@@ -45,16 +51,43 @@ ul.ct-legend {
   margin: 0;
 }
 .ct-legend .ct-series-0:before {
-  background-color: #00386b;
-  border-color: #00386b;
+  background-color: #F5A214;
+  border-color: #F5A214;
 }
 .ct-legend .ct-series-1:before {
-  background-color: #e0aa0f;
-  border-color: #e0aa0f;
+  background-color: #262626;
+  border-color: #262626;
 }
-.ct-legend .ct-series-2:before {
-  background-color: #adafaa;
-  border-color: #adafaa;
+.containerHistorical {
+    position: relative;
+    border: 1px solid white;
+    overflow: hidden;
+    height: 330px;
+}
+
+#chart1 {
+    position: absolute;
+    top: 0;
+    left: 0px;
+    width: 100%;
+    z-index: 0;
+    height: 100px;
+}
+#chart2 {
+    position: absolute;
+    top: 105px;
+    left: 0px;
+    width: 100%;
+    z-index: 10000;
+    height: 100px;
+}
+#chart3 {
+    position: absolute;
+    top: 210px;
+    left: 0px;
+    width: 100%;
+    z-index: 10000;
+    height: 100px;
 }
 /* STATISTIC */
 .statistic {
