--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates');
-@import url('https://fonts.googleapis.com/css?family=Kumar+One');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 body {
     background-color: #262626;
