--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body {
     border-right: 3px solid #F5A214;
     border-left: 3px solid #F5A214;
 }
-#btnGenerar {
+#btnGenerar, #btnReestablecer {
     bottom: 0;
     left: : 0;
     color: #fff;
