--- a/css/tables.css
+++ b/css/tables.css
@@ -25,12 +25,12 @@
     font-size: 10px;
 }
 .btnPlus {
-    margin-right: 10px;
+    margin-left: 5px;
     position: absolute;
-    left: 50px;
+    left: 0;
     top: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
+    transform: translate(0, -50%);
+    -webkit-transform: translate(0, -50%);
 }
 .row {
     padding: 0;
@@ -51,9 +51,39 @@
     justify-content: center;
     align-items: center;
 }
+.flex-parent {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /*justify-content: center;*/
+    align-items: center;
+    padding: 0px;
+    margin: 5px 5px 20px 5px;
+}
+.long-and-truncated-with-child-corrected {
+    flex: 1;
+    min-width: 0; /* or some value */
+}
+.long-and-truncated-with-child-corrected > a {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+}
+.links {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 @media (max-width: 992px) {
     .dn {
         display: none;
+    }
+    .te {
+        margin-left: 25px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 @media (min-width: 993px) {
