--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,24 @@
 .montserrat {
     font-family: 'Montserrat';
 }
+.contloader {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.capa {
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    overflow: hidden;
+}
 
 /* CARD */
 .card {
