--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -157,6 +157,29 @@ table td {
     border: 1px solid white;
     overflow: hidden;
     height: 370px;
+    top: 20px;
+}
+.historicalLegend {
+    position: absolute;
+    font-size: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20px;
+    font-family: 'Montserrat';
+}
+.cuadroAmarillo {
+    width: 10px;
+    height: 10px;
+    background: #F5A214;
+}
+.cuadroNegro {
+    width: 10px;
+    height: 10px;
+    background: #262626;
 }
 #chart1 {
     position: absolute;
@@ -185,7 +208,7 @@ table td {
     stroke-linecap: circle;
 }
 #chart1 .ct-label.ct-horizontal { 
-    font-size: 12px; 
+    font-size: 10px; 
     position: relative; 
     transform: rotate(45deg); 
     transform-origin: left top;
@@ -194,16 +217,14 @@ table td {
     text-anchor: middle;
 }
 #chart1 .ct-series-a .ct-label {
-    font-size: 12px;
+    font-size: 10px;
     fill: #F5A214;
-    font-weight: bold;
     font-family: 'Montserrat';
-    transform: translate(-25px,0px);
+    transform: translate(-10px,0px);
 }
 #chart1 .ct-series-b .ct-label {
-    font-size: 12px;
+    font-size: 10px;
     fill: #262626;
-    font-weight: bold;
     font-family: 'Montserrat';
     transform: translate(0px,30px);
 }
@@ -235,7 +256,7 @@ table td {
     stroke-linecap: circle;
 }
 #chart2 .ct-label.ct-horizontal { 
-    font-size: 12px; 
+    font-size: 10px; 
     position: relative; 
     transform: rotate(45deg); 
     transform-origin: left top;
@@ -244,16 +265,14 @@ table td {
     text-anchor: middle;
 }
 #chart2 .ct-series-a .ct-label {
-    font-size: 12px;
+    font-size: 10px;
     fill: #F5A214;
-    font-weight: bold;
     font-family: 'Montserrat';
     transform: translate(-10px,0px);
 }
 #chart2 .ct-series-b .ct-label {
-    font-size: 12px;
+    font-size: 10px;
     fill: #262626;
-    font-weight: bold;
     font-family: 'Montserrat';
     transform: translate(0px,30px);
 }
@@ -276,14 +295,13 @@ table td {
     stroke-linecap: square;
 }
 #chart3 .ct-series-a .ct-label {
-    font-size: 12px;
+    font-size: 10px;
     fill: #F5A214;
-    font-weight: bold;
     font-family: 'Montserrat';
     text-anchor: middle;
 }
 #chart3 .ct-labels span {
-    font-size: 12px;
+    font-size: 10px;
     color: #262626;
     font-family: 'Montserrat';
 }
