--- a/css/menuBarra.css
+++ b/css/menuBarra.css
@@ -10,6 +10,8 @@ nav {
     top: 45px;
     width: 250px;
     height: calc(100% - 45px);
+    height: -webkit-calc(100% - 45px);
+    height: -moz-calc(100% - 45px);
     background-color: #262626;
     z-index: 2;
     overflow-y: auto;
