--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -359,18 +359,6 @@ table td {
     width: 2000px;
     height: 250px;
 }
-.chartLineContainerHistorical {
-    position: relative;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: 0;
-    width: 100%;
-}
-#chartLine2 {
-    width: 2000px;
-    height: 250px;
-}
 .chartLineSticky {
     position: -webkit-sticky;
     position: sticky;
@@ -382,20 +370,32 @@ table td {
 #chartLineSticky {
     width: 250px;
     height: 250px;
-    border: 1px solid red;
-}
-#chartLineSticky2 {
-    width: 1000px;
-    height: 250px;
 }
 .chartLineBackground {
     position: absolute;
     top: 0;
     left: 40px;
-    width: 1960px;
+    width: 250px;
     height: 250px;
     background: white;
     z-index: 2;
+}
+
+#chartLine2 {
+    width: 2000px;
+    height: 250px;
+}
+#chartLineSticky2 {
+    width: 250px;
+    height: 250px;
+}
+.chartLineContainerHistorical {
+    position: relative;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 0;
+    width: 100%;
 }
 /* YEARS MONTHS */
 .yearContainer {
@@ -438,13 +438,12 @@ table td {
 }
 @media (max-width: 1699px) {
     .chartLineContainer {
-        overflow-x: visible;
+        overflow-x: scroll;
     }
 }
 @media (min-width: 1700px) {
     #chartLine {
         width: 100%;
-        overflow-x: visible;
     }
     #chartLine2 {
         width: 100%;
