--- a/css/tables.css
+++ b/css/tables.css
@@ -17,7 +17,6 @@
 .headTable {
     font-size: 12px;
     font-weight: 600;
-    padding: 0;
 }
 .bodyTable {
     padding: 0;
@@ -39,7 +38,7 @@
     padding: 0;
 }
 .iXs {
-    height: 22px;
+    height: 20px;
 }
 .activado {
     display: inline-block;
@@ -77,6 +76,9 @@
     position: absolute;
     bottom: 0;
     right: 0;
+}
+.btnFecha {
+    padding: 0px 10px 0px 10px;
 }
 @media (max-width: 992px) {
     .dn {
