--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
-
+.montserrat {
+    font-family: "Montserrat", sans-serif;
+}
 body {
     background-color: #262626;
 }
@@ -22,9 +24,6 @@ body {
     bottom: 0;
     left: : 0;
     color: #fff;
-}
-.montserrat {
-    font-family: 'Montserrat';
 }
 .cent {
     display: flex;
